# 4ry1337.github.io

./: .gitignore  Cargo.toml  README.md  Trunk.toml  config.toml
.github/workflows/: build.yml
assets/style/: custom.css  index.css  index.min.css  index.min.css.map
config/: base.yaml  local.yaml  production.yaml
content/: 1_personal.toml  1_personal.yaml  2_education.toml  2_education.yaml  3_experience.toml  3_experience.yaml  4_projects.toml  5_skills.toml  5_skills.yaml  6_contacts.toml  6_contacts.yaml  _index.md
content/about/: _index.md
content/blog/: _index.md
content/note/: binary-representation.md  four-nines-of-availability.md  generics.md  huffman-coding.md  luhn-algorithm.md  tests-are-also-code.md
content/notes/: _index.md  generics.md  luhn-algorithm.md  tests-are-also-code.md
docs/: 1_general.yaml
public/: index.html  search_index.en.js  styles.css
public/style/: index.min.css  index.min.css.map  normalize.css
sass/: index.scss
sass/animations/: index.scss  page.scss
sass/components/: badge.scss  breadcrumb.scss  button.scss  card.scss  index.scss  input.scss  label.scss  link.scss  navigation.scss
sass/custom/: about.scss  footer.scss  hero.scss  index.scss  layout.scss  note.scss  notes.scss  typography.scss
sass/utilities/: border_radius.scss  gap.scss  index.scss  margin.scss  padding.scss  typography.scss
scss/: custom.scss  index.scss
src/: config.rs  content.rs  error.rs  lib.rs  main.rs  tracing.rs  types.rs
templates/: base.css  base.html  stream.html  taxonomy_list.html  taxonomy_single.html  todos.html
(+98 files in other folders)
